--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 body {
     background-image: url("resources/background-image.jpg");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover cover;
     background-position-x: center;
     background-attachment: fixed;
     font-family: "Source Code Pro";
@@ -14,6 +14,7 @@ body {
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
     margin: 0;
     padding: 0;
+    word-wrap: break-word;
 }
 
 main {
